--- a/react-ai-tool/package.json
+++ b/react-ai-tool/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/vite": "^4.1.13",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^16.1.0",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
